# AssociativeOperationCounter-Cpp_port

./: .gitignore  CMakeLists.txt  README.md  constBijectionArr.h  generator.h  isomorphism.h  main.cpp  operationPrintingBuffer.h  output_2.txt  validator.h
ConstGenerators/: constBijectionArr.h  constCartesianProductArr.h
Utils/: utils.cpp  utils.h
